kuberentes_artefacts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-service-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-service-api
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: expense-service-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - expense-service-api
            topologyKey: nodes
      containers:
      - env:
        - name: SERVER_NAME
          valueFrom:
            secretKeyRef:
              key: SERVER_NAME
              name: app-secrets
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: DB_USERNAME
              name: app-secrets
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: app-secrets

        image: 251338463376.dkr.ecr.eu-central-1.amazonaws.com/mathema-eks-demo:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: service-port
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: expense-service-api
        ports:
        - containerPort: 8080
          name: service-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: service-port
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 750Mi
          requests:
            cpu: 200m
            memory: 400Mi

      restartPolicy: Always
---
